--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 		</style>
 	</head>
 	<main>
-		<button id="playBtn">Play</button>
+		<!-- <button id="playBtn">Play</button> -->
+		
 	</main>
-	<script src="index.js" type="module"></script>
+	<script src="index.ts" type="module"></script>
 </html>
